# taskiq-fastapi

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
taskiq_fastapi/: __init__.py  initializator.py
