[tool.poetry]
name = "taskiq-fastapi"
description = "FastAPI integration for taskiq"
authors = ["Taskiq team <taskiq@no-reply.com>"]
maintainers = ["Taskiq team <taskiq@no-reply.com>"]
version = "0.1.2"
readme = "README.md"
license = "LICENSE"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Development Status :: 3 - Alpha",
]
keywords = ["taskiq", "tasks", "distributed", "async", "fastapi"]
packages = [{ include = "taskiq_fastapi" }]

[tool.poetry.dependencies]
python = "^3.7"
taskiq = "^0,>=0.3.1"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
yesqa = "^1.3.0"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
coverage = "^6.4.2"
black = "^23.1.0"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_unused_ignores = false

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
